# eldflow

./: .env.example  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  MongoDB.md  README.md
assets/: main.css
src/: ai.rs  main.rs  router.rs
src/components/: dashboard.rs  features.rs  hero.rs  navbar.rs  testimonial.rs
src/components/common/: header.rs  logo.rs
src/components/dashboard/: chat.rs  navbar.rs  profile.rs  sidebar.rs
src/components/dashboard/chat/: panel.rs  sidebar.rs
src/components/dashboard/fields/: input.rs  number.rs
src/components/dashboard/profile/: edit.rs  view.rs
src/components/dashboard/trips/: create.rs  list.rs  read.rs
src/components/features/: item.rs
src/components/footer/: icon.rs  links.rs  logo.rs
src/components/testimonial/: author.rs  card.rs  rating.rs
src/pages/: dashboard.rs  login.rs  signup.rs  trip.rs
src/server/auth/: controller.rs  model.rs  request.rs
src/server/conversation/: controller.rs  model.rs  request.rs
src/server/trip/: controller.rs  model.rs  request.rs  response.rs
