[package]
name = "eldflow"
version = "0.0.1"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }

dioxus = { version = "0.6.3", features = ["fullstack", "router", "html"] }
mongodb = { version = "3.1.0", optional = true }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.38", features = ["serde"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
futures-util = { version = "0.3.31" }
jsonwebtoken = { version = "9.3.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
tokio = { version = "1.41.1", optional = true }
uuid = { version = "1.11.0", optional = true }
rand = { version = "0.8.5", optional = true }
axum-extra = { version = "0.9.4", features = ["cookie"], optional = true }
rand_core = { version = "0.6.4", features = ["std"], optional = true }
anyhow = "1.0.93"
time = "0.3.36"
regex = "1.11.1"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.72", features = ["Selection", "Window"] }
http-api-isahc-client = { version = "0.2.2", optional = true }
unsplash-api = { version = "0.1.0", optional = true }
gems = { version = "0.0.9", optional = true }
gloo-storage = "0.3.0"
axum = { version = "0.7.7", optional = true }
tower-http = { version = "0.6.1", features = ["cors"], optional = true }
reqwest = { version = "0.12.9", optional = true }
dioxus-web = { version = "0.6.3", features = ["hydrate"] }
eld = { version = "0.0.1", features = ["dio"] }

# Debug
dioxus-logger = "0.6.2"
serde_json = "1.0.140"

[features]
default = []
server = [
    "dioxus/server",
    "gems",
    "reqwest",
    "axum",
    "tower-http",
    "unsplash-api",
    "http-api-isahc-client",
    "tokio",
    "mongodb",
    "jsonwebtoken",
    "argon2",
    "uuid",
    "rand",
    "axum-extra",
    "rand_core"
]
web = ["dioxus/web"]
axum-extra = ["dep:axum-extra"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
